--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-
+            <script src="/js/test.js"/>
         </div>
     </body>
 </html>
