--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>weenus</title>
-        <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"/>
+        <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script>
         <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
         <div class="container">
-            <script src="/js/test.js"/>
+            <script src="js/test.js"></script>
         </div>
     </body>
 </html>
