--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title>temporary name</title>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
         <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script>
-        <link rel="stylesheet" type="text/css" href="/css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <div class="container">
-            <script src="js/test2.js"></script>
+        <div class="game">
+            <script src="tests/test3.js"></script>
         </div>
     </body>
 </html>
