fix amee being dum

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="game">
-            <script src="tests/test3.js"></script>
+            <script src="tests/mouseFollow.js"></script>
         </div>
     </body>
 </html>
