title screen + html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>temporary name</title>
-        <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-        <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-        <div class="game">
-            <script src="tests/collisionsOverlap.js"></script>
-        </div>
-    </body>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Polyscapism</title>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+    <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
+<body>
+    <h1>POLYSCAPISM</h1>
+    <h2><a href="./lvl1.html"><i>start...</i></a></h2>
+
+</body>
+
 </html>
