--- a/lvl2.html
+++ b/lvl2.html
@@ -2,15 +2,17 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>Polyscapism - LVL2</title>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
         <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script> 
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <div class="game">
-            <p id="mousepos"></p>
-            <script src="levels/lvl2.js"></script>
+        <script src="levels/lvl2.js"></script>
+        <p>White objects (like the square at the bottom) can be dragged across the screen.</p>
+        <div id="game">
+            <!-- canvas goes here -->
         </div>
+        <i><p id="solved">&nbsp;</p></i>
     </body>
 </html>
