--- a/backupindex.html
+++ b/backupindex.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>temporary name</title>
+        <title>Polyscapism</title>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
         <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script> 
         <link rel="stylesheet" type="text/css" href="css/style.css">
