--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Polyscapism</title>
     <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script> -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
