--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script> -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/glitch.css">
 </head>
 
 <body>
-    <h1>POLYSCAPISM</h1>
-    <h2><a href="./lvl1.html"><i>start...</i></a></h2>
+    <h1 class="glitch" data-text="POLYSCAPISM">POLYSCAPISM</h1>
+    <h2><a href="lvl1.html" class="w3-button w3-round-xlarge w3-grey w3-hover-light-grey"><i>&nbsp;start...&nbsp;</i></a></h2>
 
 </body>
 
