--- a/lvl3.html
+++ b/lvl3.html
@@ -8,9 +8,11 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <div class="game">
-            <p id="mousepos"></p>
-            <script src="levels/lvl3.js"></script>
+        <script src="levels/lvl3.js"></script>
+        <p>Make all the squares the same colour by clicking on them.</p>
+        <div id="game">
+            <!-- canvas goes here -->
         </div>
+        <i><p id="solved">&nbsp;</p></i>
     </body>
 </html>
