--- a/lvl3.html
+++ b/lvl3.html
@@ -5,12 +5,13 @@
         <title>Polyscapism - LVL3</title>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
         <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script> 
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <script src="levels/lvl3.js"></script>
-        <p>Make all the squares the same colour by clicking on them.</p>
-        <div id="game">
+        <p class="w3-animate-top">Make all the squares the same colour by clicking on them.</p>
+        <div class="w3-animate-opacity" id="game">
             <!-- canvas goes here -->
         </div>
         <i><p id="solved">&nbsp;</p></i>
