--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <h1 class="glitch" data-text="POLYSCAPISM">POLYSCAPISM</h1>
-    <h2><a href="lvl1.html" class="w3-button w3-round-xlarge w3-grey w3-hover-light-grey"><i>&nbsp;start...&nbsp;</i></a></h2>
+    <h1 class="w3-animate-opacity glitch" data-text="POLYSCAPISM">POLYSCAPISM</h1>
+    <h2><a href="lvl1.html" class="w3-animate-opacity w3-button w3-round-xlarge w3-grey w3-hover-light-grey"><i>&nbsp;start...&nbsp;</i></a></h2>
 
 </body>
 
