--- a/lvl3.html
+++ b/lvl3.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <script src="levels/lvl3.js"></script>
-        <p class="w3-animate-top">Make all the squares the same colour by clicking on them.</p>
+        <p class="w3-animate-top">Make all the squares <b id="sqcol"></b> by clicking on them.</p>
         <div class="w3-animate-opacity" id="game">
             <!-- canvas goes here -->
         </div>
