--- a/lvl2.html
+++ b/lvl2.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Polyscapism - LVL2</title>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-        <script src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script> 
+        <script src="https://p5play.org/v3/p5.play.js"></script> 
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
